testcases/bad/templates/bad-if-scoping.j2
{% if True %}
{% for x in [1,2] %}
{% endif %}